Arreglando el menu

--- a/OMI/Views/Home/Index.cshtml
+++ b/OMI/Views/Home/Index.cshtml
@@ -5,19 +5,19 @@
     <div class="col-md-12">
         <div class="panel panel-border panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Sistema OMI</h3>
+                <h3 class="panel-title">Sistema OIM</h3>
             </div>
             <div class="panel-body">
                 <div class="jumbotron">
-                    <h1>Bienvenido:</h1> @Html.ViewBag.User
+                    <h1>Politica Integral:</h1> @Html.ViewBag.User
                     <p>@Html.ViewBag.UsuarioActual</p>
                     <p class="lead">Sistema Interno Para la Sistema de Gestion de la Calidad</p>
-                    <p><a href="@Url.Action("Concentrado","Solicitud")" class="btn btn-primary btn-lg">Resgistro &raquo;</a></p>
+                    <p><a href="https://trello.com" class="btn btn-primary btn-lg">Tablero &raquo;</a></p>
                 </div>
 
                 <div class="row">
                     <div class="col-md-4">
-                        <h2>Solicitar Servicio/Producto</h2>
+                        <h2>Mision</h2>
                         <p>
                             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
                             enables a clean separation of concerns and gives you full control over markup
@@ -26,12 +26,12 @@
                         <p><a class="btn btn-default" href="@Url.Action("NuevaSolicitud","Solicitud")">Solicitar &raquo;</a></p>
                     </div>
                     <div class="col-md-4">
-                        <h2>Get more libraries</h2>
+                        <h2>Vision</h2>
                         <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
                         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
                     </div>
                     <div class="col-md-4">
-                        <h2>Web Hosting</h2>
+                        <h2>Valores</h2>
                         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
                         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
                     </div>
