--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -192,7 +192,7 @@
    
         <hr/>
         <footer>
-            <p>&copy; @DateTime.Now.Year OnePro Ingenieria Aplicada</p>
+            <p>&copy; @DateTime.Now.Year ::  Ingenieria Aplicada <span>OnePro</span>  </p>
         </footer>
  
 
