--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -34,24 +34,28 @@
                 <li class="has_sub">
                     <a href="#" class="waves-effect"><i class="md md-home"></i><span>Organizacion</span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
-                        <li><a href="@Url.Action("index", "home")">Reglamento</a></li>
-                        <li><a href="@Url.Action("Index", "home")">Lista Maestra</a></li>
+                        <li><a href="@Url.Action("Politica", "Organizacion")">Politica</a></li>
+                        <li><a href="@Url.Action("Reglamento", "Organizacion")">Reglamento</a></li>
+                        <li><a href="@Url.Action("Maestra", "Organizacion")">Lista Maestra</a></li>
                         <li><a href="@Url.Action("index", "home")">Organigrama</a></li>
+                        <li><a href="@Url.Action("index", "home")">Directorio</a></li>
 
                     </ul>
                
                   
                 </li>
+<li>
+                    <a href="https://trello.com" class="waves-effect"  target="blank" ><i class="md md-format-list-bulleted"></i><span>Tablero Actividades</span></a>
 
-                <li class="has_sub">
+                </li><li class="has_sub">
                     <a href="#" class="waves-effect"><i class="md md-laptop-windows"></i><span>Requerimientos</span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <li><a href="@Url.Action("NuevaSolicitud", "Solicitud")">Productos/Servicios</a></li>
-                        <li><a href="@Url.Action("Index", "Personal")">Personal</a></li>
+                      
                         <li><a href="@Url.Action("index", "home")">Matenimientos</a></li>
                         <li><a href="@Url.Action("AllSolicitud", "Solicitud")">Registro Solicitudes</a></li>
                         <li><a href="@Url.Action("Concentrado", "Solicitud")">Registro Pedidos</a></li>
-                      
+                        <li><a href="@Url.Action("index", "home")">Capacitacion</a></li>
                     </ul>
                
                   
@@ -87,10 +91,15 @@
                 <a href="#" class="waves-effect"><i class="md md-people"></i><span>Ejecucion Servicios</span><span class="pull-right"><i class="md md-add"></i></span></a>
                     <ul class="list-unstyled">
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
-                        <li><a href="@Url.Action("index", "home")">Autorizacion</a></li>
-                                          
-                      
-                     
+                    <a href="#" class="waves-effect"><span>Autorizaciones</span><span class="pull-right"><i class="md md-add"></i></span></a>
+                    <ul>
+                        <li><a href="@Url.Action("index", "home")">Comisiones</a></li>
+                        <li><a href="@Url.Action("index", "home")">Comprobacion Gastos</a></li>
+                        </ul>
+
+                        <li><a href="@Url.Action("Index", "Personal")">Requerimiento Personal</a></li>
+                        <li><a href="@Url.Action("AllSolicitud", "Solicitud", new {id=3})">Registro Solicitudes</a></li>
+                        <li><a href="@Url.Action("Index", "home")">Estimacion</a></li>
                     </ul>
                 </li>
                 <li class="has_sub">
@@ -98,8 +107,8 @@
                
                     <ul class="list-unstyled">
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
-                        <li><a href="@Url.Action("index", "home")">Propuestas</a></li>
-                        <li><a href="@Url.Action("index", "home")">Cotizacion</a></li>                        
+                        <li><a href="@Url.Action("index", "home")">Propuestas T.E.</a></li>
+                        <li><a href="@Url.Action("index", "home")">Cotizacion Equipo</a></li>                        
                         <li><a href="@Url.Action("index", "home")">Oportunidades</a></li>
                      
                     </ul>
@@ -110,7 +119,7 @@
                     <ul class="list-unstyled">
                         <li class="has_sub">
                            
-                            <a href="#" class="waves-effect"><i class="md md-people"></i><span>Inventario</span><span class="pull-right"><i class="md md-add"></i></span></a>
+                            <a href="#" class="waves-effect"><span>Inventario</span><span class="pull-right"><i class="md md-add"></i></span></a>
                             <ul>
                                 <li><a href="@Url.Action("index", "home")">Equipo de Computo</a></li>
                                 <li><a href="@Url.Action("index", "home")">Equipos Varios</a></li>
@@ -131,11 +140,13 @@
                
                     <ul class="list-unstyled">
                         <!--a href="#" class="waves-effect"><i class="md md-people"></i><span>C.V.</span><span class="pull-right"><i class="md md-add"></i></span></a>-->
-                        <li><a href="@Url.Action("index", "home")">Solicitud de Cotizacion</a></li>
-                        <li><a href="@Url.Action("index", "home")">Seleccion de Cotizacion</a></li>
-                        <li><a href="@Url.Action("index", "home")">Orden de Compra</a></li>
-                        <li><a href="@Url.Action("index", "home")">Evaluacion de Proveedor Post-Venta</a></li>
-                     
+                        <li><a href="@Url.Action("index", "home")">Solicitud Cotizacion</a></li>
+                        <li><a href="@Url.Action("index", "home")">Seleccion Cotizacion</a></li>
+                        <li><a href="@Url.Action("index", "home")">Orden Compra</a></li>
+                        <li><a href="@Url.Action("index", "home")">Evaluacion Post-Venta</a></li>
+                        <li><a href="@Url.Action("index", "home")">Cumpliento Personal</a></li>
+                        <li><a href="@Url.Action("index", "home")">Catalogo Proveedores</a></li>
+                        <li><a href="@Url.Action("index", "home")">Estimaciones</a></li>
                     </ul>
                 </li>
              
