--- a/OMI/Views/Organizacion/Maestra.cshtml
+++ b/OMI/Views/Organizacion/Maestra.cshtml
@@ -3,12 +3,10 @@
     <div class="col-md-12">
         <div class="panel panel-border panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title"></h3>
+                <h3 class="panel-title">Lista maestra de documentos SGI</h3>
             </div>
             <div class="panel-body">
-                <p>
-                    @Html.ActionLink("Create New", "Create")
-                </p>
+                <input type="button" id="btnExport" value="Export to Excel" />
                 <table id="assets-data-table" class="table table-striped table-bordered" style="width:100%">
                     <thead> 
                     <tr>
@@ -30,10 +28,10 @@
                         <th>
                             @Html.DisplayNameFor(model => model.Rev)
                         </th>
-                        <th>
+                      @*  <th>
                             @Html.DisplayNameFor(model => model.Link)
                         </th>
-                        <th></th>
+                        <th></th>*@
                     </tr>
                     </thead>
                     <tbody>
@@ -44,7 +42,7 @@
                                 @Html.DisplayFor(modelItem => item.Id)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Codigo)
+                               @Html.ActionLink(Html.DisplayFor(modelItem => item.Codigo).ToString(),"Download",new {id=item.Id})
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Nombre)
@@ -53,19 +51,18 @@
                                 @Html.DisplayFor(modelItem => item.Area)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Fecha)
+                                @Html.DisplayFor(modelItem =>( item.Fecha ))
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Rev)
                             </td>
-                            <td>
+                           @* <td>
                                 @Html.DisplayFor(modelItem => item.Link)
                             </td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
-                                @Html.ActionLink("Details", "Details", new {id = item.Id}) |
-                                @Html.ActionLink("Delete", "Delete", new {id = item.Id})
-                            </td>
+                          
+                                @Html.ActionLink("Details", "Download", new {id = item.Id}) 
+                            </td>*@
                         </tr>
                     }
                     </tbody>
@@ -79,10 +76,36 @@
     <script type="text/javascript">
         $(document).ready(function() {
 
+
+            
+            $("#btnExport").click(function () {
+                tableToExcel('assets-data-table', 'Table');
+            });
+
+
+            var tableToExcel = (function () {
+                var uri = 'data:application/vnd.ms-excel;base64,'
+                    , template = '<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:x="urn:schemas-microsoft-com:office:excel" xmlns="http://www.w3.org/TR/REC-html40"><head><!--[if gte mso 9]><xml><x:ExcelWorkbook><x:ExcelWorksheets><x:ExcelWorksheet><x:Name>{worksheet}</x:Name><x:WorksheetOptions><x:DisplayGridlines/></x:WorksheetOptions></x:ExcelWorksheet></x:ExcelWorksheets></x:ExcelWorkbook></xml><![endif]--></head><body><table>{table}</table></body></html>'
+                    , base64 = function (s) { return window.btoa(unescape(encodeURIComponent(s))) }
+                    , format = function (s, c) { return s.replace(/{(\w+)}/g, function (m, p) { return c[p]; }) }
+                return function (table, name) {
+                    if (!table.nodeType) table = document.getElementById(table)
+                    var ctx = { worksheet: name || 'Worksheet', table: table.innerHTML }
+                    window.location.href = uri + base64(format(template, ctx))
+                }
+            })()
             $('#assets-data-table').DataTable({
                 dom: 'Bfrtip',
                 buttons: [
-                    'copy', 'csv', 'excel', 'pdf', 'print'
+                    {
+                        extend: 'copyHtml5',
+                        exportOptions: {
+                            columns: ':contains("Office")'
+                        }
+                    },
+                    'excelHtml5',
+                    'csvHtml5',
+                    'pdfHtml5'
                 ],
                 "scrollY": true,
                 "scrollX": true,
@@ -94,5 +117,4 @@
             });
         });
     </script>
-
 }
