--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -37,7 +37,7 @@
                         <li><a href="@Url.Action("Politica", "Organizacion")">Politica</a></li>
                         <li><a href="@Url.Action("Reglamento", "Organizacion")">Reglamento</a></li>
                         <li><a href="@Url.Action("Maestra", "Organizacion")">Lista Maestra</a></li>
-                        <li><a href="@Url.Action("index", "home")">Organigrama</a></li>
+                        <li><a href="@Url.Action("Organigrama", "Organizacion")">Organigrama</a></li>
                         <li><a href="@Url.Action("index", "home")">Directorio</a></li>
 
                     </ul>
