--- a/OMI/Views/Shared/_MenuIzquierdo.cshtml
+++ b/OMI/Views/Shared/_MenuIzquierdo.cshtml
@@ -38,7 +38,7 @@
                         <li><a href="@Url.Action("Reglamento", "Organizacion")">Reglamento</a></li>
                         <li><a href="@Url.Action("Maestra", "Organizacion")">Lista Maestra</a></li>
                         <li><a href="@Url.Action("Organigrama", "Organizacion")">Organigrama</a></li>
-                        <li><a href="@Url.Action("index", "home")">Directorio</a></li>
+                        <li><a href="@Url.Action("Directorio", "Organizacion")">Directorio</a></li>
 
                     </ul>
                
