--- a/OMI/Views/Oportunidad/Create.cshtml
+++ b/OMI/Views/Oportunidad/Create.cshtml
@@ -8,7 +8,7 @@
     <div class="col-md-12">
         <div class="panel panel-border panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Sistema OIM - Ingenieria Aplicada OnePro @Model.Fecha2</h3>
+                <h3 class="panel-title">Sistema OIM - Ingenieria Aplicada OnePro </h3>
             </div>
             <div class="panel-body">
 
@@ -79,7 +79,7 @@
                                             <span class="input-group-addon" id="sizing-addon1">Fecha:</span>
                                             @*                  @Html.TextBoxFor(model => model.Fecha, new {@class = "form-control",type="date"})
     <input  class="form-control" type="datetime-local" name="@Html.NameFor(o => o.Fecha)" placeholder="Fecha" aria-describedby="sizing-addon1" value="@Model.Fecha" required> @Html.ValidationMessageFor(model => model.Fecha)*@
-                                            @Html.TextBoxFor(model=>model.Fecha2,new {@class="form-control"})
+                                            @Html.TextBoxFor(model=>model.Fecha,new {@class="form-control"})
                                            
                 </div>
 
