--- a/OMI/Views/Organizacion/Politica.cshtml
+++ b/OMI/Views/Organizacion/Politica.cshtml
@@ -6,13 +6,15 @@
                 <h3 class="panel-title">Sistema OIM</h3>
             </div>
             <div style="text-align: center">
-                <h1><span> POLÍTICA INTEGRAL
-                        <br/>
+                <h1>
+                    <span>
+                        POLÍTICA INTEGRAL
+                        <br />
                         INGENIERÍA APLICADA ONEPRO
                     </span>
                 </h1>
             </div>
-            <div class="panel-body" style="text-align: justify">
+            <div class="panel-body" id="Documento">
                 <p>
                     Ingeniería Aplicada OnePro sostiene un compromiso permanente con la satisfacción de los Clientes, la generación de valor a sus colaboradores, la realización de sus Integrantes y el bienestar de la sociedad.
 
@@ -23,7 +25,7 @@
 
                     Nuestro compromiso atiende a los siguientes principios:
                 </p>
-                <br/>
+                <br />
                 <ul>
                     <li>	Asegurar que los procesos y operaciones de la empresa cumplan con la Legislación y Normatividad aplicable;</li>
                     <li>	Mejorar continuamente la calidad, previniendo los impactos ambientales y los riesgos laborales.</li>
@@ -35,12 +37,16 @@
                     <li>	Ejecutar revisiones periódicas para confirmar el cumplimiento de los objetivos y la eficacia de la Gestión.</li>
                     <li>	Comunicar a todos los integrantes de la Institución y la comunidad nuestra Política, los esfuerzos realizados y logros obtenidos para el Desarrollo Sostenible.</li>
                 </ul>
-            
-                <span>
-                    Juan Cruz Velázquez
-                    Director
 
-                </span>
+                <p id="firma">
+
+                    <span>
+                        Juan Cruz Velázquez
+
+                    </span>
+                    <br />
+                    Director
+                </p>
 
 
             </div>
