--- a/OMI/Views/Organizacion/Reglamento.cshtml
+++ b/OMI/Views/Organizacion/Reglamento.cshtml
@@ -13,7 +13,7 @@
                     </span>
                 </h1>
             </div>
-            <div class="panel-body" style="text-align: justify">
+            <div class="panel-body" id="Documento">
                 <p>
                   
                     Ingeniería Aplicada OnePro sostiene un Código de Ética transparente que forma parte de la consolidación de la filosofía que rige a la empresa. 
@@ -24,32 +24,41 @@
                 </p>
                 <br/>
                 <ul>
-                1. Divulgar información confidencial relativa a procesos, métodos, estrategias, planes, proyectos, datos técnicos, de mercado o de cualquier otro tipo.
+                    <li> 1. Divulgar información confidencial relativa a procesos, métodos, estrategias, planes, proyectos, datos técnicos, de mercado o de cualquier otro tipo.
 
-                2. Cualquier incumplimiento o Acto no considerado en la Planificación de los servicios que ponga en riesgo la Calidad de los trabajos propiedad del cliente o de la Empresa.
+                    <li>
+                        2. Cualquier incumplimiento o Acto no considerado en la Planificación de los servicios que ponga en riesgo la Calidad de los trabajos propiedad del cliente o de la Empresa.
+                    </li>
+                    <li>
+                        4. Cualquier incumplimiento a los lineamientos del cuidado del ambiente o cualquier Acto que afecte la preservación ambiental.
+                    </li>
+                    <li>
+                        5. El Conflicto de Intereses, en la conducción de sus responsabilidades profesionales y en sus acciones personales.
+                    </li>
+                    <li>
+                        6. Cualquier incumplimiento a los lineamientos de Salud y Seguridad o cualquier Acto que ponga en riesgo la salud y seguridad propia o de las personas, así como Acoso laboral, sexual, introducir bebidas Alcohólicas, drogas, fumar dentro de las instalaciones y negarse a participar en evacuaciones o simulacros con fines de seguridad.
+                    </li>
+                    <li>
+                        7. Utilizar el mobiliario y las herramientas de trabajo para fines distintos al desempeño de sus labores; así como instalar en las computadoras software ajenos a la Empresa.
+                    </li>
+                    <li>
+                        8. Discriminar a las personas por razones de género, estado civil, edad, religión, raza, opinión política, clase social o económica, embarazo, lengua, origen étnico, nacionalidad, preferencia sexual o discapacidad.
+                    </li>
+                    <li>
+                        9. Permitir la entrada a las instalaciones o centros de trabajo de la Empresa así como el uso del equipo a personas ajenas a la misma sin previa autorización de un supervisor facultado.
+                    </li>
+                    <li>
+                        10. Portar armas de cualquier clase dentro de la Empresa o en los vehículos propiedad de la misma y tomar cualquier tipo de represalia o incurrir en actos de intimidación con motivo del trabajo.
+                    </li>
+                </ul>
+                <p id="firma" ><span>
+                            Juan Cruz Velázquez
 
-                4. Cualquier incumplimiento a los lineamientos del cuidado del ambiente o cualquier Acto que afecte la preservación ambiental.
-
-                5. El Conflicto de Intereses, en la conducción de sus responsabilidades profesionales y en sus acciones personales.
-
-                6. Cualquier incumplimiento a los lineamientos de Salud y Seguridad o cualquier Acto que ponga en riesgo la salud y seguridad propia o de las personas, así como Acoso laboral, sexual, introducir bebidas Alcohólicas, drogas, fumar dentro de las instalaciones y negarse a participar en evacuaciones o simulacros con fines de seguridad.
-
-                7. Utilizar el mobiliario y las herramientas de trabajo para fines distintos al desempeño de sus labores; así como instalar en las computadoras software ajenos a la Empresa.
-
-                8. Discriminar a las personas por razones de género, estado civil, edad, religión, raza, opinión política, clase social o económica, embarazo, lengua, origen étnico, nacionalidad, preferencia sexual o discapacidad.
-
-                9. Permitir la entrada a las instalaciones o centros de trabajo de la Empresa así como el uso del equipo a personas ajenas a la misma sin previa autorización de un supervisor facultado.
-
-                10. Portar armas de cualquier clase dentro de la Empresa o en los vehículos propiedad de la misma y tomar cualquier tipo de represalia o incurrir en actos de intimidación con motivo del trabajo.
-</ul>
-                <span style="text-align: center">
-                    Juan Cruz Velázquez
+                        </span><br />
                     Director
-
-                </span>
-
-
-            </div>
+                </p>
+                
+                </div>
         </div>
     </div>
 </div>
