--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -21,6 +21,8 @@
     <link href="~/Content/assets/css/pages.css" rel="stylesheet" type="text/css">
     <link href="~/Content/assets/css/menu.css" rel="stylesheet" type="text/css">
     <link href="~/Content/assets/css/responsive.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Qwigley" rel="stylesheet">
+    <link href="~/Content/css/micss.css" rel="stylesheet" type="text/css">
 
     <script src="~/Content/assets/js/modernizr.min.js"></script>
     <link href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
@@ -253,7 +255,9 @@
 </script>
 <script src="http://ajax.aspnetcdn.com/ajax/mvc/5.1/jquery.validate.unobtrusive.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="http://code.jquery.com/ui/1.11.3/jquery-ui.min.js"></script>
-    
+
+    <script src="~/Scripts/mitable.js"></script>
+
 @Styles.Render("~/Content/datatables")
 @Scripts.Render("~/bundles/datatables")
 @RenderSection("scripts", required: false)
