pruebas en oportunidad

--- a/OMI/Views/Shared/_Layout.cshtml
+++ b/OMI/Views/Shared/_Layout.cshtml
@@ -199,7 +199,7 @@
    
         <hr/>
         <footer>
-            <p>&copy; @DateTime.Now.Year ::  Ingenieria Aplicada <span>OnePro</span>  </p>
+            <p>&copy; @DateTime.Now.Year :: <a style="color: black;" href="http://www.onepro.com.mx"> Ingenieria Aplicada <strong>OnePro</strong> </a> </p>
         </footer>
  
 
