--- a/OMI/Views/Oportunidad/Edit.cshtml
+++ b/OMI/Views/Oportunidad/Edit.cshtml
@@ -73,17 +73,13 @@
 
                     <div class="input-group miinput">
                                      
-                        <span class="input-group-addon" id="sizing-addon1">Fecha:</span>
+                      
                                           
-                        @*     @Html.TextBoxFor(model => model.Fecha, new { htmlAttributes = new { @class = "form-control" } })
-    @Html.ValidationMessageFor(model => model.Fecha, "", new { @class = "text-danger" })
-                                                                                    <input type="date" class="form-control" name="@Model.Fecha" placeholder="Fecha" aria-describedby="sizing-addon1" value="@Model.Fecha" required>
-
-
-                        @Html.TextBoxFor(model => model.Fecha2, new { @class = "form-control",type="Date"})   *@
-                        @Html.TextBoxFor(model=>model.Fecha,new {@class="form-control"})
-                        @Html.ValidationMessageFor(model => model.Fecha)
-
+                        <span class="input-group-addon" id="sizing-addon1">Fecha:</span>
+                        @*                  @Html.TextBoxFor(model => model.Fecha, new {@class = "form-control",type="date"})
+    <input  class="form-control" type="datetime-local" name="@Html.NameFor(o => o.Fecha)" placeholder="Fecha" aria-describedby="sizing-addon1" value="@Model.Fecha" required> @Html.ValidationMessageFor(model => model.Fecha)* @
+                                            @Html.TextBoxFor(model=>model.Fecha,new {@class="form-control"})]*@
+                        <input  class="form-control" type="date" name="@Html.NameFor(o => o.Fecha)" placeholder="Fecha" aria-describedby="sizing-addon1" value="@Model.Fecha" required> @Html.ValidationMessageFor(model => model.Fecha)
                     </div>
 
                     <div class="input-group miinput">
