--- a/OMI/Views/Oportunidad/List.cshtml
+++ b/OMI/Views/Oportunidad/List.cshtml
@@ -90,9 +90,8 @@
                                 @Html.DisplayFor(modelItem => item.TbUsuario.Nombre)
                             </td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                @Html.ActionLink("Detalles", "Edit", new { id = item.Id }) 
+                               
                             </td>
                         </tr>
                     }
